--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,23 @@
-# Python virtual environments
-venv/
-venv_name/
-__pycache__/
-*.pyc
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Environment variables
-.env
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# VS Code settings
-.vscode/
+# testing
+/coverage
 
-# OS files
+# production
+/build
+
+# misc
 .DS_Store
-Thumbs.db
-#streamlit/
-# Streamlit secrets
-.streamlit/secrets.toml
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
