--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Python virtual environments
+venv/
+venv_name/
+__pycache__/
+*.pyc
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Environment variables
+.env
 
-# testing
-/coverage
+# VS Code settings
+.vscode/
 
-# production
-/build
-
-# misc
+# OS files
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+Thumbs.db
+#streamlit/
+# Streamlit secrets
+.streamlit/secrets.toml
